# ruarango

./: Cargo.toml  README.md  build.rs  lints.out
.github/workflows/: main.yml
src/: builder.rs  conn.rs  db.rs  error.rs  lib.rs  mocks.rs  model.rs  traits.rs  types.rs  utils.rs
src/impls/: coll.rs  cursor.rs  db.rs  doc.rs  graph.rs  job.rs  mod.rs
src/model/: auth.rs  coll.rs  db.rs  mod.rs
src/model/auth/: input.rs  mod.rs  output.rs
src/model/coll/: input.rs  mod.rs  output.rs
src/model/common/: input.rs  mod.rs  output.rs
src/model/cursor/: mod.rs  output.rs
src/model/cursor/input/: create.rs  delete.rs  mod.rs  next.rs
src/model/db/: input.rs  mod.rs  output.rs
src/model/doc/: input.rs  mod.rs  output.rs
src/model/doc/input/: create.rs  creates.rs  delete.rs  deletes.rs  mod.rs  read.rs  reads.rs  replace.rs  replaces.rs  update.rs  updates.rs
src/model/graph/: input.rs  mod.rs  output.rs
src/model/graph/input/: create.rs  delete.rs  list_edges.rs  mod.rs  read.rs
src/model/graph/input/edge/: create.rs  delete.rs  mod.rs  read.rs  replace.rs  update.rs
src/model/graph/input/edge_def/: create.rs  delete.rs  mod.rs  read.rs  replace.rs
src/model/graph/input/vertex/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src/model/graph/input/vertex_coll/: create.rs  delete.rs  mod.rs  read.rs
src/traits/: coll.rs  cursor.rs  db.rs  doc.rs  graph.rs  job.rs  mod.rs
tests/: lib.rs  macros.rs  test_coll.rs  test_cursor.rs  test_db.rs  test_doc.rs  test_ruarango.rs
tests/common/: mod.rs
tests/common_coll/: mod.rs
tests/common_db/: mod.rs
tests/conn/: mod.rs
tests/macros/: mod.rs
tests/model/: mod.rs
tests/pool/: mod.rs
tests/rand_util/: mod.rs
tests/tests/: coll.rs  cursor.rs  db.rs  doc.rs  graph.rs  mod.rs
