[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["asynchronous", "database"]
description = "ArangoDB Client Implementation"
documentation = "http://docs.rs/ruarango"
edition = "2018"
homepage = "http://github.com/rustyhorde/ruarango"
keywords = ["arangodb", "database"]
license = "MIT OR Apache-2.0"
name = "ruarango"
readme = "README.md"
repository = "https://github.com/rustyhorde/ruarango"
version = "0.1.0"
autotests = false

[dependencies]
anyhow = "1"
async-trait = "0"
const_format = "0"
derive_builder = "0"
futures = "0"
getset = "0"
libeither = "0"
reqwest = { version = "0", features = [ "json" ] }
serde = "1"
serde_derive = "1"
serde_json = "1"
thiserror = "1"
wiremock = "0"

[dev-dependencies]
lazy_static = "1"
rand = "0"
r2d2 = "0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tokio-test = "0"
wiremock = "0"

[build-dependencies]
rustversion = "1"

[[test]]
name = "integration"
path = "tests/lib.rs"
