[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["asynchronous", "database"]
description = "ArangoDB Client Implementation"
documentation = "http://docs.rs/ruarango"
edition = "2018"
homepage = "http://github.com/rustyhorde/ruarango"
keywords = ["arangodb", "database"]
license = "MIT OR Apache-2.0"
name = "ruarango"
readme = "README.md"
repository = "https://github.com/rustyhorde/ruarango"
version = "0.1.3"
autotests = false
rust-version = "1.68.2"

[features]
unstable = []

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.60"
const_format = "0.2.30"
derive_builder = "0.20.0"
futures = "0.3.24"
getset = "0.1.2"
libeither = "0.5.0"
reqwest = { version = "0.12.1", features = [ "json" ] }
serde = { version = "1.0.151", features = [ "derive" ] }
serde_json = "1.0.91"
thiserror = "1.0.38"
wiremock = "0.6.0"

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
r2d2 = "0.8.10"
tokio = { version = "1.23.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-test = "0.4.2"
wiremock = "0.6.0"

[build-dependencies]
rustversion = "1.0.11"

[[test]]
name = "integration"
path = "tests/lib.rs"
